# Project-3

./: .env.example  .gitignore  JULES_TASKS.md  README.md  docker-compose.yml
.jules/: bolt.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ai_insights.py  auth.py  backtesting.py  hedge.py  market_data.py  orders.py  portfolio.py  risk.py  signals.py  strategies.py  websocket.py
backend/app/brokers/: alpaca.py  base.py  paper.py
backend/app/core/: config.py  database.py  logging.py  redis_client.py  security.py
backend/app/domains/hedge/: engine.py  recommender.py  trigger.py
backend/app/domains/market_data/: services.py
backend/app/domains/risk/: metrics.py  pre_trade.py
backend/app/domains/strategies/: base_strategy.py  ema_crossover.py  engine.py  mean_reversion.py  rsi_momentum.py  signal_aggregator.py
backend/app/models/: __init__.py  audit.py  hedge.py  news.py  order.py  portfolio.py  position.py  risk.py  signal.py  strategy.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  hedge.py  market_data.py  order.py  portfolio.py  position.py  risk.py  signal.py  strategy.py  user.py
backend/migrations/: env.py  init.sql
backend/migrations/versions/: 0001_initial_migration.py
backend/tests/: test_auth.py  test_re_stress_findings.py  test_risk_metrics.py
backend/workers/: celery_app.py
backend/workers/tasks/: data_refresh.py  news.py  risk_monitor.py  signals.py
docs/: 1_PRD.md  2_TRD.md  3_APP_FLOW.md  4_UI_UX_BRIEF.md  5_BACKEND_SCHEMA.md  6_IMPLEMENTATION_PLAN.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/: NavOverlay.tsx  nav-overlay.tsx
frontend/src/components/layout/: PageWrapper.tsx  TopBar.tsx
frontend/src/hooks/: usePortfolio.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/store/: portfolioStore.ts  websocketStore.ts
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: trading.json
n8n_workflows/stock_sentiment_analyzer/: .env.example  README.md  docker-compose.yml  test_workflow.py  workflow.json
