[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-platform"
version = "1.0.0"
description = "AI-powered Trading & Auto-Hedging Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    # ─── Web Framework ───────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # ─── Database ────────────────────────────────────────────
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",     # for Alembic sync ops

    # ─── Redis ───────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ─── Celery ──────────────────────────────────────────────
    "celery[redis]>=5.4.0",

    # ─── Auth & Security ─────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",

    # ─── Config ──────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # ─── Market Data ─────────────────────────────────────────
    "yfinance>=0.2.48",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pandas-ta>=0.3.14b",
    "feedparser>=6.0.11",          # news RSS feeds

    # ─── Broker: Alpaca (US) ─────────────────────────────────
    "alpaca-py>=0.36.0",

    # ─── Broker: Zerodha Kite (India) ────────────────────────
    "kiteconnect>=5.0.1",

    # ─── AI / LLM ────────────────────────────────────────────
    "langchain>=0.3.13",
    "langchain-google-genai>=2.0.7",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.55",
    "langsmith>=0.2.3",
    "google-generativeai>=0.8.3",

    # ─── Sentiment Analysis ───────────────────────────────────
    "transformers>=4.47.0",
    "torch>=2.5.1",                # CPU only; use torch-gpu variant for GPU
    "vaderSentiment>=3.3.2",

    # ─── Portfolio & Risk ────────────────────────────────────
    "PyPortfolioOpt>=1.5.6",
    "Riskfolio-Lib>=7.0.0",
    "quantstats>=0.0.62",
    "scipy>=1.14.1",

    # ─── Observability ───────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",

    # ─── HTTP Client ─────────────────────────────────────────
    "httpx>=0.28.0",
    "websockets>=14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",              # test client
    "ruff>=0.8.4",
    "pyright>=1.1.390",
    "pre-commit>=4.0.1",
]
backtesting = [
    "vectorbt>=0.26.2",
    "backtrader>=1.9.78.123",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
